--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <li>
               <p class="tags">
                 Part Time Employee<br /><span
-                  >Coffee Shop | Food & Beverages <span>2022 - 2023</span></span
+                  >Coffee Shop | Food & Beverages <span>2023</span></span
                 >
               </p>
             </li>
