--- a/index.html
+++ b/index.html
@@ -138,7 +138,13 @@
             <li>
               <p class="tags">
                 Online Freelancer<br /><span
-                  >Journalist, Writer, Web Maker <span>2023 - now</span></span
+                  >Journalist, Writer, Web Maker <span>2023</span></span
+                >
+
+                 <li>
+              <p class="tags">
+                National Ambassador Job Expo<br /><span
+                  >Dealls #1 Indonesia Job Portal <span>2024 - now</span></span
                 >
               </p>
             </li>
