--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
         <p id="skills">
           <i class="fa fa-exclamation fa-fw large"></i>
-          MySkill<br /><span>Progamming, Islamic Science, Foreign Language.</span>
+          MySkill<br /><span>Progamming, Islamic Science, Foreign Language, Data Science.</span>
         </p>
         <p id="more-about">
           <i class="fa fa-comment fa-fw large"></i>
