--- a/index.html
+++ b/index.html
@@ -190,8 +190,14 @@
 
         <!-- =========== CARD EDUCATION =========== -->
         <div class="card">
-          
+          <div class="card">
+          <p>
+            <i class="fas fa-trophy stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Certified
+          </p>
+          <a href="https://drive.google.com/drive/folders/15V3vcbXGiIluoOKvyKNk-RX1FUYvUO6y?usp=drive_link" >+ Add work experience, including contracts and internships</a>  
         </div>
+        </div>
+        
       </div>
     </div>
 
