--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <p>
             <i class="fas fa-trophy stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Certified
           </p>
-          <a href="https://drive.google.com/drive/folders/15V3vcbXGiIluoOKvyKNk-RX1FUYvUO6y?usp=drive_link" >+ Add work experience, including contracts and internships</a>  
+          <a href="https://drive.google.com/drive/folders/15V3vcbXGiIluoOKvyKNk-RX1FUYvUO6y?usp=drive_link" >+ This is My Certificate has been saved in Google Drive.</a>  
         </div>
         </div>
         
